# rust-sample-app

./: README.md
sample1/src/: main.rs  vars.rs
sample1/src/vars/: sub_a.rs  sub_b.rs
samplecli/: Cargo.toml  README.md
samplecli/src/: main.rs
todo/: Cargo.toml  README.md
todo/src/: main.rs
todo/templates/: index.html
