[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
actix-web = "3.3.2"
askama = "0.11.0"
thiserror = "1.0.30"
rusqlite = {version = "0.26", features = ["bundled"]}
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
